--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -8,8 +8,23 @@
   background: #fff;
 }
 .anNuanWrapper {
+  .ant-layout {
+    height: 100%;
+  }
+}
+.home-wrapper {
   height: 100%;
   .ant-layout {
     height: 100%;
   }
+}
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
+body {
+  margin: 0;
 }
